[package]
name = "CMDConvetor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
